--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ---
-title: Jekyll Serif - Jekyll Small Business Theme
+title: Newpal Labs - Home
 layout: default
 bodyClass: page-home
 ---
 
 <div class="intro pb-4">
   <div class="container">
-    <h1>Serif - Jekyll Small Business Theme.</h1>
-    <p>Our business helps hundreds of customers with their accounting and taxation needs each year.</p>
+    <h1>We're everything Angular.</h1>
+    <p>We help you build web apps and services around the Angular platform.</p>
+    <p>Our focus is creating value driving apps and services to help you deliver even more value to your customers.</p>
   </div>
 </div>
 
