Update intro text

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ bodyClass: page-home
 
 <div class="intro pb-4">
   <div class="container">
-    <h1>We're everything Angular.</h1>
-    <p>We help you build web apps and services around the Angular platform.</p>
-    <p>Our focus is creating value driving apps and services to help you deliver even more value to your customers.</p>
+    <h1>Let's grow together.</h1>
+    <p>We help entrepreneurs take their ideas from concept to the web platforms they desire.</p>
+<!--    <p>Our focus is helping you craft your web experience</p>-->
   </div>
 </div>
 
